--- a/src/manifest.yml
+++ b/src/manifest.yml
@@ -1,15 +1,57 @@
-apiVersion: v1
-kind: Pod
+---
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: sql-server
-  labels:
-    app: database
-
+  name: my-big-data-app
 spec:
-  containers:
-    - name: dba-server
-      image: mysql:latest
-      cmd: ['echo','Hello']
-      ports:
-        - containerPort: 80
+  replicas: 2
+  selector:
+    matchLabels:
+      app: my-big-data-app
+  template:
+    metadata:
+      labels:
+        app: my-big-data-app
+    spec:
+      containers:
+        - name: big-data-server
+          image: dipugodocker/vmware-sol:latest
+          ports:
+            - containerPort: 80
+          command: ["stress"]
+
+        - name: simple-busybox
+          image: busybox
+          command:
+            - echo
+            - Hello
+            - World
+
+---
+
+apiVersion: autoscaling.k8s.io/v1
+kind: VerticalPodAutoscaler
+metadata:
+  name: my-big-data-vpa
+spec:
+  targetRef:
+    apiVersion: "apps/v1"
+    kind: Deployment
+    name: my-big-data-app
+  resourcePolicy:
+    containerPolicies:
+      - containerName: big-data-server
+        controlledResources:
+          - cpu
+          - memory
+        maxAllowed:
+          cpu: 1
+          memory: 800Mi
+        minAllowed:
+          cpu: 100m
+          memory: 50Mi
+      - containerName: simple-busybox
+        mode: "Off"
+  updatePolicy:
+    updateMode: "Off"
 ...
