Fixed the workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,39 +11,40 @@ on:
     branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+#  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
+  k8sPolicyCheck:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Datree Policy Check
+      env:
+        DATREE_TOKEN: ${{ secrets.DATREE_TOKEN }}
+      # You may pin to the exact commit or the version.
+      # uses: datreeio/action-datree@3587b81449982c327052ca0f9dfcd6983194ed2e
+      uses: datreeio/action-datree@main
+      with:
+        path: 'src/manifest.yml'
+        cliArguments: '--only-k8s-files'
+
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-
-      # Runs a single command using the runners shell
-
       - uses: actions/checkout@v2
-
       - name: Run a one-line script
         run: echo "Lets check"
-      - name: Datree CLI
-        # You may pin to the exact commit or the version.
-        # uses: datreeio/action-datree@3587b81449982c327052ca0f9dfcd6983194ed2e
-        uses: datreeio/action-datree@v1.0.0
-        with:
-          # the file/s to be tested
-          path: src/*
 
       - name: Build the Docker image
-          uses: actions/checkout@v2
-          env:
-            SUPER_SECRET: ${{ secrets.DOCKER_PASS }}
-          run: |
-            docker login -u dipugodocker -p "$SUPER_SECRET"
-            docker build . --file Dockerfile --tag dipugodocker/vmware-sol:latest
-            docker run dipugodocker/vmware-sol:latest
-            docker push dipugodocker/vmware-sol:latest
+        env:
+          SUPER_SECRET: ${{ secrets.DOCKER_PASS }}
+        run: |
+          cd src/
+          docker login -u dipugodocker -p "$SUPER_SECRET"
+          docker build . --file Dockerfile --tag dipugodocker/vmware-sol:latest
+          docker run dipugodocker/vmware-sol:latest
+          docker push dipugodocker/vmware-sol:latest
